# pagurus

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/2021-05-17-081439_create_users/: up.sql
src/: db.rs  graphql_schema.rs  main.rs  schema.rs
src/models/: users.rs
src/models/users/: users.graphql  users.rs  users_mutation.rs  users_query.rs
