[package]
name = "pagurus"
version = "0.1.0"
authors = ["tejasag <tejasagarwalbly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.4.0"
actix-web = "3.3.2"
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "numeric"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
juniper = "0.15"
serde = { version = "1.0.125", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"
